--- a/Resources/views/Nodes/index.html.twig
+++ b/Resources/views/Nodes/index.html.twig
@@ -38,7 +38,7 @@
                     {% else %}
                     <a href="{{ path('nodeActivation', {'node': node.id, 'active': 1} ) }}" class="glyphicon glyphicon-play"></a>
                     {% endif %}
-                    <a href="{{ path('nodeDelete', {'node': node.id} ) }}" class="glyphicon glyphicon-remove" onclick="return confirm('Êtes vous sur de vouloir supprimer ce node ?');"></a>     
+                    <a href="{{ path('nodeDelete', {'node': node.id} ) }}" class="glyphicon glyphicon-trash" onclick="return confirm('Êtes vous sur de vouloir supprimer ce node ?');"></a>     
                     <a href="{{ path('nodeReset', {'node': node.id} ) }}" onclick="return confirm('Êtes vous sur de vouloir initialiser ce node ?');" class="glyphicon glyphicon-flash"></a>     
                </td>
             </tr>
