--- a/Resources/views/Nodes/index.html.twig
+++ b/Resources/views/Nodes/index.html.twig
@@ -53,7 +53,7 @@
           </div>   
           <div class="col-lg-4 with-border" style="height: 282px;">
               <div class="content">
-                <a href="{{ path('nodeAdd') }}" class="btn glyphicon glyphicon-plus-sign" >{{ "node.btn.add" | trans({}, "YdleRoomBundle") }}</a>
+                <a href="{{ path('nodeAdd') }}" class="btn btn-default glyphicon glyphicon-plus-sign" >{{ "node.btn.add" | trans({}, "YdleRoomBundle") }}</a>
               </div>
           </div>
         </div>
