--- a/Resources/views/Nodes/form.html.twig
+++ b/Resources/views/Nodes/form.html.twig
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-lg-8 with-border" style="width: 760px; margin-right: 20px;">
           
-            <h2>{{ "node.add.node" | trans({}, "YdleNodesBundle") }}</h2>
+            <h2>{{ "node.add.node" | trans }}</h2>
             {{ form_start(form, { 'attr': {'class': 'ydle-form'} }) }}
             {{ form_errors(form) }}
 
@@ -57,7 +57,7 @@
                 {{ form_errors(form.is_active) }}
             </div>
             <div class="form-item form-actions">
-                <button type="submit" class="btn btn-default glyphicon glyphicon-floppy-disk">{{ "btn.submit" | trans({}, "YdleIhmBundle") }}</button>
+                <button type="submit" class="btn btn-default glyphicon glyphicon-floppy-disk">{{ "btn.submit" | trans }}</button>
             </div>
             {{ form_end(form) }}  
         </div>
