--- a/Resources/views/Nodes/index.html.twig
+++ b/Resources/views/Nodes/index.html.twig
@@ -16,22 +16,22 @@
 #}
 {% extends "YdleIhmBundle::layout.html.twig" %}
 
-{% block title '{{ "page.nodes.title" | trans({}, "YdleNodesBundle") }}' %}
+{% block title "page.nodes.title" | trans %}
 
 {% block content %}
 
    <div class="row">
           <div class="col-lg-8 with-border" style="width: 760px; margin-right: 20px;">
-            <h2>{{ "node.list.title" | trans({}, "YdleNodesBundle") }}</h2> 
+            <h2>{{ "node.list.title" | trans}}</h2> 
             <table id="sensors">
             <thead>
             <tr>
-              <th>{{ "node.list.code" | trans({}, "YdleNodesBundle") }}</th>
-              <th>{{ "title.name" | trans({}, "YdleIhmBundle") }}</th>
-              <th>{{ "title.type" | trans({}, "YdleIhmBundle") }}</th>
-              <th>{{ "node.list.room" | trans({}, "YdleNodesBundle") }}</th>
-              <th>{{ "title.active" | trans({}, "YdleIhmBundle") }}</th>
-              <th>{{ "title.action" | trans({}, "YdleIhmBundle") }}</th>
+              <th>{{ "node.list.code" | trans }}</th>
+              <th>{{ "title.name" | trans }}</th>
+              <th>{{ "title.type" | trans }}</th>
+              <th>{{ "node.list.room" | trans }}</th>
+              <th>{{ "title.active" | trans }}</th>
+              <th>{{ "title.action" | trans }}</th>
             </tr>
             </thead>
             <tbody>
@@ -46,7 +46,7 @@
                {% endfor %}
                </td>
                <td>{{ node.room.name }}</td>
-               <td>{% if node.isactive %}Yes{% else %}{{ "label.no" | trans({}, "YdleIhmBundle") }}{% endif %}</td>
+               <td>{% if node.isactive %}Yes{% else %}{{ "label.no" | trans }}{% endif %}</td>
                <td> 
                     <a href="{{ path('nodeEdit', {'node': node.id} ) }}" class="glyphicon glyphicon-pencil"></a>
                     {% if node.isactive %}
@@ -54,14 +54,14 @@
                     {% else %}
                     <a href="{{ path('nodeActivation', {'node': node.id, 'active': 1} ) }}" class="glyphicon glyphicon-play"></a>
                     {% endif %}
-                    <a href="{{ path('nodeDelete', {'node': node.id} ) }}" class="glyphicon glyphicon-trash" onclick="return confirm('{{ "node.delete.confirm" | trans({}, "YdleNodesBundle") }}');"></a>     
-                    <a href="{{ path('nodeLink', {'node': node.id} ) }}" onclick="return confirm('{{ "node.init.confirm" | trans({}, "YdleNodesBundle") }}');" class="glyphicon glyphicon-flash"></a>     
+                    <a href="{{ path('nodeDelete', {'node': node.id} ) }}" class="glyphicon glyphicon-trash" onclick="return confirm('{{ "node.delete.confirm" | trans }}');"></a>     
+                    <a href="{{ path('nodeLink', {'node': node.id} ) }}" onclick="return confirm('{{ "node.init.confirm" | trans }}');" class="glyphicon glyphicon-flash"></a>     
                </td>
             </tr>
             {% endfor %}
             {% else %}
             <tr>
-                <td colspan="7">{{ "node.list.empty" | trans({}, "YdleNodesBundle") }}</td>
+                <td colspan="7">{{ "node.list.empty" | trans }}</td>
             </tr>
             {% endif %}
             </tbody>
@@ -69,7 +69,7 @@
           </div>   
           <div class="col-lg-4 with-border" style="height: 282px;">
               <div class="content">
-                <a href="{{ path('nodeAdd') }}" class="btn btn-default glyphicon glyphicon-plus-sign" >{{ "node.btn.add" | trans({}, "YdleNodesBundle") }}</a>
+                <a href="{{ path('nodeAdd') }}" class="btn btn-default glyphicon glyphicon-plus-sign" >{{ "node.btn.add" | trans }}</a>
               </div>
           </div>
         </div>
