ihm to hub migration

--- a/Resources/views/Nodes/index.html.twig
+++ b/Resources/views/Nodes/index.html.twig
@@ -14,7 +14,7 @@
     along with Ydle.  If not, see <http://www.gnu.org/licenses/>.
 
 #}
-{% extends "YdleIhmBundle::layout.html.twig" %}
+{% extends "YdleHubBundle::layout.html.twig" %}
 
 {% block title "page.nodes.title" | trans %}
 
