--- a/Resources/views/Nodes/form.html.twig
+++ b/Resources/views/Nodes/form.html.twig
@@ -15,51 +15,47 @@
 
 #}
 
-{% extends "YdleNodesBundle:Nodes:index.html.twig" %}
+{% if entry %}
+{% set dataformsource = '/nodes/form/' ~ entry.id %}
+{% else %}
+{% set dataformsource = '' %}
+{% endif %}
 
-{% block content %}
-
-    <div class="row">
-        <div class="col-lg-8 with-border" style="width: 760px; margin-right: 20px;">
-          
-            <h2>{{ "node.add.node" | trans }}</h2>
-            {{ form_start(form, { 'attr': {'class': 'ydle-form'} }) }}
-            {{ form_errors(form) }}
-
-            <div class="form-item">
-                {{ form_label(form.name) }}
-                {{ form_widget(form.name) }}
-                {{ form_errors(form.name) }}
-            </div>
-            <div class="form-item">
-                {{ form_label(form.code) }}
-                {{ form_widget(form.code) }}
-                {{ form_errors(form.code) }}
-            </div>
-            <div class="form-item">
-                {{ form_label(form.room) }}
-                {{ form_widget(form.room) }}
-                {{ form_errors(form.room) }}
-            </div>
-            <div class="form-item">
-                {{ form_label(form.types) }}
-                {{ form_widget(form.types) }}
-                {{ form_errors(form.types) }}
-            </div>
-            <div class="form-item">
-                {{ form_label(form.description) }}
-                {{ form_widget(form.description) }}
-                {{ form_errors(form.description) }}
-            </div>
-            <div class="form-item">
-                {{ form_label(form.is_active) }}
-                {{ form_widget(form.is_active) }}
-                {{ form_errors(form.is_active) }}
-            </div>
-            <div class="form-item form-actions">
-                <button type="submit" class="btn btn-default glyphicon glyphicon-floppy-disk">{{ "btn.submit" | trans }}</button>
-            </div>
-            {{ form_end(form) }}  
+{{ form_start(form, { 'action': action, 'attr': {'class': 'ydle-form ajax-form', 'role': 'form', 'data-reload': 'nodes-list', 'data-formsource': dataformsource, 'data-refresh': true, 'novalidate': 'novalidate' } }) }}
+{{ form_errors(form) }}
+    <div class="box-body">
+        <div class="form-group">
+            {{ form_label(form.name) }}
+            {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.name) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.code) }}
+            {{ form_widget(form.code, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.code) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.room) }}
+            {{ form_widget(form.room, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.room) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.types) }}
+            {{ form_widget(form.types, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.types) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.description) }}
+            {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.description) }}
+        </div>
+        <div class="form-group">
+            {{ form_label(form.is_active) }}
+            {{ form_widget(form.is_active, {'attr': {'class': 'form-control'}}) }}
+            {{ form_errors(form.is_active) }}
         </div>
     </div>
-{% endblock %}
+    <div class="box-footer">
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </div>
+{{ form_end(form) }}
