--- a/Resources/views/Nodes/form.html.twig
+++ b/Resources/views/Nodes/form.html.twig
@@ -21,7 +21,7 @@
 {% set dataformsource = '' %}
 {% endif %}
 
-{{ form_start(form, { 'action': action, 'attr': {'class': 'ydle-form ajax-form', 'role': 'form', 'data-reload': 'nodes-list', 'data-formsource': dataformsource, 'data-refresh': true, 'novalidate': 'novalidate' } }) }}
+{{ form_start(form, { 'action': action, 'attr': {'class': 'ydle-form ajax-form', 'role': 'form', 'data-reload': 'nodes-list', 'data-formsource': dataformsource, 'data-refresh': true, 'novalidate': 'novalidate', 'id': 'node-form' } }) }}
 {{ form_errors(form) }}
     <div class="box-body">
         <div class="form-group">
